[gd_scene load_steps=11 format=2]

[ext_resource path="res://UI/Font.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://UI/YouLoseUI.gd" type="Script" id=2]
[ext_resource path="res://World/Web.png" type="Texture" id=3]
[ext_resource path="res://Enemy/Fly.png" type="Texture" id=4]
[ext_resource path="res://Other/Collectible/Items/GearWheel/GearWheel.png" type="Texture" id=5]
[ext_resource path="res://Other/Collectible/Items/Bolt/Bolt.png" type="Texture" id=6]
[ext_resource path="res://Other/Collectible/Items/Screw/Screw.png" type="Texture" id=7]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.254902, 0.270588, 0.47451, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 1, 1, 1, 1 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 1 )

[node name="YouLoseUI" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -0.353546
margin_right = -0.353546
custom_styles/panel = SubResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fly" type="Sprite" parent="."]
position = Vector2( 72.3535, 80 )
texture = ExtResource( 4 )

[node name="Web2" type="Sprite" parent="."]
position = Vector2( 88.3535, 96 )
texture = ExtResource( 3 )

[node name="Label" type="Label" parent="."]
margin_left = 64.3535
margin_top = 16.0
margin_right = 191.354
margin_bottom = 53.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "You Lose"

[node name="RetryButton" type="Button" parent="."]
margin_left = 72.0
margin_top = 64.0
margin_right = 184.0
margin_bottom = 89.0
custom_fonts/font = SubResource( 3 )
text = "Retry"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelMenuButton" type="Button" parent="."]
margin_left = 72.3535
margin_top = 104.0
margin_right = 184.354
margin_bottom = 129.0
custom_fonts/font = SubResource( 3 )
text = "Main Menu"

[node name="Web" type="Sprite" parent="."]
position = Vector2( 8.35355, 8 )
texture = ExtResource( 3 )

[node name="Web3" type="Sprite" parent="."]
position = Vector2( 240.354, 40 )
texture = ExtResource( 3 )

[node name="Web4" type="Sprite" parent="."]
position = Vector2( 168.354, 16 )
texture = ExtResource( 3 )

[node name="Web5" type="Sprite" parent="."]
position = Vector2( 192.354, 136 )
texture = ExtResource( 3 )

[node name="Web6" type="Sprite" parent="."]
position = Vector2( 16.3535, 120 )
texture = ExtResource( 3 )

[node name="Web7" type="Sprite" parent="."]
position = Vector2( 40.3535, 56 )
texture = ExtResource( 3 )

[node name="Web8" type="Sprite" parent="."]
position = Vector2( 240.354, 112 )
texture = ExtResource( 3 )

[node name="Fly2" type="Sprite" parent="."]
position = Vector2( 215.113, 13.1369 )
texture = ExtResource( 4 )

[node name="Fly" type="Sprite" parent="Fly2"]
position = Vector2( -75.8087, 126.636 )
texture = ExtResource( 4 )

[node name="Bolt" type="Sprite" parent="Fly2"]
position = Vector2( -204.855, 44.6117 )
texture = ExtResource( 6 )

[node name="Screw" type="Sprite" parent="."]
position = Vector2( 243.249, 76.4869 )
texture = ExtResource( 7 )

[node name="GearWheel" type="Sprite" parent="."]
position = Vector2( 36.0665, 138.005 )
texture = ExtResource( 5 )

[connection signal="pressed" from="RetryButton" to="." method="_on_RetryButton_pressed"]
[connection signal="pressed" from="LevelMenuButton" to="." method="_on_LevelMenuButton_pressed"]
